# Quad-corepo

./: README.md  docker-compose.yaml  pyproject.toml
app-db/: Dockerfile  docker-compose.yaml
backend/: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yaml  dockerfile  entp0.sh  entrypoint.sh  logging.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: database.py  main.py
backend/api/cruds/: crud.py  data.py  payments.py  stakeholder.py  timeShareRecords.py  user.py  utils.py
backend/api/database/: MigrateDb.py  Models.py  __init__.py  database.py  db.py  migrateDb.py  models.py  seed.py
backend/api/lib/: auth.py  firebase.py
backend/api/models/: Models.py
backend/api/routers/: payments.py  routers.py  stripe.py
backend/api/schemas/: payments.py  schemas.py  stripe.py
backend/api/services/: stripe.py
backend/tests/: TestMain.py  conftest.py  testDb.py  testMain.py  testRouters.py  testSchemas.py  test_bargraph.py  test_createrecord.py  test_createuser.py  test_familyrecords.py  test_llmanalysis.py  test_main.py  test_names.py  test_piegraph.py  test_userinfo.py
backend/tests/cruds/: testPayments.py  testStakeholder.py  testTimeShareRecords.py  testUser.py
docs/: CordingRules.md  PRD.md
frontend/: .babelrc  dockerfile  jest.config.cjs  jest.setup.js  next.config.mjs  package.json  tailwind.config.ts
frontend/__mocks__/next/: router.js
frontend/contexts/: StakeholderContext.tsx
frontend/src/: data.ts  firebase.ts  stripe.ts
frontend/src/_components/: BarChart.tsx  FamilyRegistrationForm.tsx  LoginForm.tsx  OpenaiAnalysis.tsx  PieChart.tsx  RecordForm.tsx
frontend/src/app/: _app.tsx  globals.css  page.tsx  (+1 more)
(+49 files in other folders)
