[tool.poetry]
name = "section9-12-final"
version = "0.1.0"
description = ""
authors = ["mayumiseo <hyperballad.tokyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
firebase-admin = "^6.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
